<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EventNotifier</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="event_title">Event Title</string>
	<string name="event_desc">Event Description</string>
	<string name="start_date">Start</string>
	<string name="end_date">End</string>
	<string name="event_save">Save</string>
	<string name="event_view">View</string>
	<string name="event_next">Next</string>
	<string name="cur_time">Time</string>
	<string name="cur_date">Date</string>
	<string name="cur_time_view">Time</string>
	<string name="cur_date_view">Date</string>
	<string name="view_text">Large Text</string>
	<string name="event_delete">Delete</string>
</resources>
